[gd_scene load_steps=2 format=3 uid="uid://cg05kaik72vc1"]

[ext_resource type="Script" path="res://scenes/ui/better button/better_button.gd" id="1_esgx4"]

[node name="BetterButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
text = "hello"
script = ExtResource("1_esgx4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
